--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,19 +1,21 @@
 body {
   box-sizing: border-box;
   margin: 0;
+  background-color: tan;
 }
 
 stateful-client {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  margin-top: 100;
 }
 
 game-lobby {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 450;
-  height: 450;
-  border: 1px solid black;
+  width: 700;
+  height: 700;
 }
 
 .gameList {
@@ -31,9 +33,8 @@ game-board {
   justify-content: center;
   align-items: center;
   background-color: tan;
-  max-width: 450px;
-  max-height: 450px;
-  border: 1px solid black;
+  max-width: 700px;
+  max-height: 700px;
 }
 
 .boardCanvas {
